seperate all code to library

--- a/webservProject/Makefile
+++ b/webservProject/Makefile
@@ -1,14 +1,48 @@
+NAME = webserve
 
-all:
+CC = c++
+
+CFLAGS = -Wall -Werror -Wextra -std=c++98
+
+PARSER_PATH = parser
+HTTP_PATH = http
+NETWORK_PATH = network
+
+# HEADERS = ./parser/Configs.hpp ./network/Server.hpp ./http/Http.hpp
+
+INCLUDE = -I$(PARSER_PATH) \
+			-I$(HTTP_PATH) \
+			-I$(NETWORK_PATH)
+
+LIB = -Lparser -lparser \
+		-Lnetwork -lnetwork \
+		-Lhttp -lhttp
+
+SRCS = main.cpp
+
+OBJS = $(SRCS:.cpp=.o)
+
+all: $(NAME)
+
+$(OBJS): %.o: %.cpp Makefile
+	$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $@
+
+$(NAME): $(OBJS)
 	make -C parser
 	make -C network
-	c++ main_test.cpp ./parser/parser_webserve.a ./network/network.a -o webserve
+	make -C http
+	$(CC) $(CFLAGS) $(INCLUDE) $(OBJS) $(LIB) -o $(NAME)
 
 clean:
 	make clean -C parser
 	make clean -C network
+	make clean -C http
+	rm -f $(OBJS)
 
 fclean: clean
 	make fclean -C parser
 	make fclean -C network
+	make fclean -C http
 	rm -f webserve
+
+re: fclean all
