create httptest class for test server

--- a/webservProject/parser/tester/default.conf
+++ b/webservProject/parser/tester/default.conf
@@ -5,7 +5,11 @@ http {
             server_name Hello;
             error_page Hello;
             location test {
-                    root d;
+                    
+            }
+            listen 80;
+    }
+}
             
     
 
