add allow method to parser

--- a/webservProject/configs/default copy.conf
+++ b/webservProject/configs/default copy.conf
@@ -6,12 +6,11 @@ http {
           listen 80   ;      index index.html   ;
           listen 81 ;
           index index.htm index.php    ;
-          root ./www;
+          root ./www ;
 
           error_page 404.html  ;
 
           client_max_body       1000;
-
           allow GET;
 
           location / {
@@ -22,8 +21,16 @@ http {
                index something.html something.php;
           }
 
-          location /cgi {
+          location /cgi_1 {
                allow POST DELETE;
+               cgi_file cgi1.php;
+          }
+
+          types {
+               text/html html htm;
+               text/css css;
+               image/jpeg jpeg jpg;
+               application/x-javascript js;
           }
      }
 }
