--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -4,7 +4,7 @@ http {
      server {
           server_name localhost;
           listen 80   ;      index index.html   ;
-          listen 81 ;
+          listen 127.0.0.1:81 ;
           index index.htm index.php    ;
           root ./www;
 
@@ -26,10 +26,11 @@ http {
                allow POST DELETE;
           }
      }
+
+     types {
+          text/html html htm;
+          text/css css;
+          image/jpeg jpeg jpg;
+          application/x-javascript js;
+     }
 }
-
-
-
-
-
-
