--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -2,20 +2,20 @@
 
 http {
      server {
-          server_name localhost;
-          listen 80   ;      index index.html   ;
-          listen 127.0.0.1:81 ;
+          server_name localhost:8080;
+          listen 8080   ;      index index.html   ;
+          listen 127.0.0.1:8081 ;
           index index.htm index.php    ;
           root ./www;
 
-          error_page 404.html  ;
+          error_page ./www/404.html  ;
 
           client_max_body       1000;
 
-          allow GET;
+          allow GET POST;
 
           location / {
-               root ./new/location ;
+               
           }
 
           location /something {
@@ -31,6 +31,7 @@ http {
           text/html html htm;
           text/css css;
           image/jpeg jpeg jpg;
+          image/webp webp;
           application/x-javascript js;
      }
 }
