add cgi to parser

--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -24,6 +24,8 @@ http {
 
           location /cgi {
                allow POST DELETE;
+               cgi_file cgi_python.py;
+               cgi_exe /usr/bin/python3;
           }
      }
 
