--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -27,6 +27,10 @@ http {
                cgi_file cgi_python.py;
                cgi_exe /usr/bin/python3;
           }
+
+          location /upload {
+
+          }
      }
 
      types {
