--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -4,7 +4,6 @@ http {
      server {
           server_name localhost:8080;
           listen 8080   ;      index index.html   ;
-          listen 127.0.0.1:8081 ;
           index index.htm index.php    ;
           root ./www;
 
@@ -30,6 +29,28 @@ http {
 
           location /upload {
 
+          }
+     }
+
+     server {
+          server_name 127.0.0.1:8081;
+          index index.html   ;
+          listen 127.0.0.1:8081 ;
+          index index.htm index.php    ;
+          root ./www;
+
+          error_page ./www/404.html  ;
+
+          client_max_body       1000;
+
+          allow GET POST;
+
+          location / {
+               
+          }
+
+          location /something {
+               index something.html something.php;
           }
      }
 
