add cgi upload and delete

--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -28,7 +28,13 @@ http {
           }
 
           location /upload {
+               allow POST;
+               root ./www/upload;
+          }
 
+          location /delete {
+               allow DELETE;
+               root ./www/upload;
           }
      }
 
