add client_max_body, default_errPage

--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -7,7 +7,7 @@ http {
           index index.htm index.php    ;
           root ./www;
 
-          error_page ./www/404.html  ;
+          error_page ./www/404.html ;
 
           client_max_body       1000;
 
@@ -35,6 +35,10 @@ http {
           location /delete {
                allow DELETE;
                root ./www/upload;
+          }
+
+          location /42 {
+               redirect http://localhost:8080/cgi;
           }
      }
 
