--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -9,7 +9,7 @@ http {
 
           error_page ./www/404.html ;
 
-          client_max_body       1000;
+          client_max_body       10000000;
 
           allow GET POST;
 
