--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -43,24 +43,35 @@ http {
      }
 
      server {
-          server_name 127.0.0.1:8081;
+          server_name localhost:8081;
           index index.html   ;
-          listen 127.0.0.1:8081 ;
-          index index.htm index.php    ;
-          root ./www;
-
-          error_page ./www/404.html  ;
-
+          listen 8081 ;
+          root ./www/prem;
           client_max_body       1000;
-
-          allow GET POST;
-
           location / {
-               
+               index prem.html;
           }
+     }
 
-          location /something {
-               index something.html something.php;
+     server {
+          server_name localhost:8082;
+          index index.html   ;
+          listen 8082 ;
+          root ./www/ton;
+          client_max_body       1000;
+          location / {
+               index ton.html;
+          }
+     }
+
+     server {
+          server_name localhost:8083;
+          index index.html   ;
+          listen 8083 ;
+          root ./www/pat;
+          client_max_body       1000;
+          location / {
+               index pat.html;
           }
      }
 
