fix download file after upload

--- a/webservProject/configs/default.conf
+++ b/webservProject/configs/default.conf
@@ -11,7 +11,7 @@ http {
 
           client_max_body       10000000;
 
-          allow GET POST;
+          allow GET ;
 
           location / {
                
@@ -22,7 +22,6 @@ http {
           }
 
           location /cgi {
-               allow POST DELETE;
                cgi_file cgi_python.py;
                cgi_exe /usr/bin/python3;
           }
